--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="shortcut icon" type="image/ico" href="/ms-pot/assets/favicon.0e726a38.ico" />
-    <title>Solid App</title>
-    <script type="module" crossorigin src="/ms-pot/assets/index.73289b92.js"></script>
+    <title>メイプルストーリー：秘薬計算機</title>
+    <script type="module" crossorigin src="/ms-pot/assets/index.23493763.js"></script>
     <link rel="stylesheet" href="/ms-pot/assets/index.83d7d751.css">
   </head>
   <body>
